--- a/Traveller/Traveller/ShopListCell.xib
+++ b/Traveller/Traveller/ShopListCell.xib
@@ -47,7 +47,7 @@
                     </label>
                 </subviews>
             </tableViewCellContentView>
-            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
                 <outlet property="imgPhoto" destination="A99-1F-acM" id="5oi-G7-2wU"/>
                 <outlet property="imgRate" destination="x4K-Kc-ASJ" id="QZS-LC-giF"/>
