--- a/Traveller/Traveller/ShopListCell.xib
+++ b/Traveller/Traveller/ShopListCell.xib
@@ -18,12 +18,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </imageView>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jBu-OY-Ai4">
-                        <rect key="frame" x="115" y="10" width="185" height="21"/>
+                        <rect key="frame" x="98" y="10" width="202" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x4K-Kc-ASJ">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="chat_bottom_keyboard_press" translatesAutoresizingMaskIntoConstraints="NO" id="x4K-Kc-ASJ">
                         <rect key="frame" x="98" y="29" width="117" height="22"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
@@ -47,7 +47,7 @@
                     </label>
                 </subviews>
             </tableViewCellContentView>
-            <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
                 <outlet property="imgPhoto" destination="A99-1F-acM" id="5oi-G7-2wU"/>
                 <outlet property="imgRate" destination="x4K-Kc-ASJ" id="QZS-LC-giF"/>
@@ -60,5 +60,6 @@
     </objects>
     <resources>
         <image name="bookmark_no" width="48" height="48"/>
+        <image name="chat_bottom_keyboard_press" width="68" height="68"/>
     </resources>
 </document>
