--- a/Traveller/Traveller/LoginViewController.xib
+++ b/Traveller/Traveller/LoginViewController.xib
@@ -37,9 +37,12 @@
                             <rect key="frame" x="26" y="158" width="238" height="40"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" title="登陆">
-                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="touchLogin:" destination="-1" eventType="touchUpInside" id="Zgr-df-S32"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.89961336096938771" green="0.88643349486793011" blue="0.89387630971909038" alpha="1" colorSpace="calibratedRGB"/>
